--- a/models/ntorq125.html
+++ b/models/ntorq125.html
@@ -8,48 +8,71 @@
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
+
     <header class="main-header">
         <div class="container header-top">
             <a href="../index.html" class="logo">Tirumala <span>TVS</span></a>
-            <div class="header-btn-group"><a href="../index.html#contact" class="btn-header">Get Quote</a></div>
+            <div class="header-btn-group">
+                <a href="../service.html" class="btn-header">Book Service</a>
+                <a href="../quotation.html" class="btn-header">Get Quotation</a>
+                <a href="../testdrive.html" class="btn-header">Book Test Drive</a>
+            </div>
         </div>
-        <div class="nav-bar">
-            <div class="container"><ul class="nav-menu"><li class="nav-item"><a href="../index.html">Home</a></li><li class="nav-item"><a href="../models.html">Inventory</a></li><li class="nav-item"><a href="../index.html#contact">Contact</a></li></ul></div>
+        <div class="nav-bar" id="navMenu">
+            <div class="container">
+                <ul class="nav-menu">
+                    <li class="nav-item"><a href="../index.html" style="color: var(--primary);">Home <span class="nav-arrow">↗</span></a></li>
+                    <li class="nav-item"><a href="../models.html">Back to Inventory</a></li>
+                    <li class="nav-item"><a href="../contact.html">Contact Us</a></li>
+                </ul>
+            </div>
         </div>
     </header>
 
-    <div class="model-hero">
-        <div class="hero-text-side">
-            <span class="model-tag">PLAY SMART</span>
-            <h1 class="model-title">Ntorq 125</h1>
-            <p style="font-size: 1.1rem; color: #555;">India's First Connected Scooter. Inspired by Stealth Aircraft design.</p>
-            <div class="model-price">₹ 84,536* <br><span>(Ex-Showroom Price)</span></div>
-            <div style="display: flex; gap: 15px;">
-                <a href="../index.html#contact" class="btn btn-primary">Book Test Ride 📅</a>
-                <a href="https://wa.me/919964946512?text=Quote%20Ntorq" class="btn btn-whatsapp">WhatsApp 💬</a>
-            </div>
+    <div class="model-hero" style="background: linear-gradient(to right, #f8f9fa, #eef2f5); padding: 60px 0;">
+        <div class="container" style="text-align: center;">
+            <h1 class="model-title" style="color: #1a3b8c;">TVS Ntorq 125</h1>
+            <p class="model-price" style="font-size: 1.5rem; color: #333;">Starting at ₹ 84,000*</p>
         </div>
-        <div class="hero-img-side"><img src="../assets/ntorq.jpg" alt="Ntorq 125" onerror="this.src='https://placehold.co/800x600?text=Ntorq+125'"></div>
     </div>
 
-    <div class="spec-grid">
-        <div class="spec-box"><h3>124.8 cc</h3><p>3V Engine</p></div>
-        <div class="spec-box"><h3>9.38 PS</h3><p>Power</p></div>
-        <div class="spec-box"><h3>9s</h3><p>0-60 km/h</p></div>
-        <div class="spec-box"><h3>BT</h3><p>SmartXonnect</p></div>
-    </div>
+    <div class="container pro-detail-section">
+        <div class="pro-detail-grid">
+            <div class="pro-text-side">
+                <h2>Overview</h2>
+                <p>The <strong>TVS Ntorq 125</strong> is India's first connected scooter, designed for the Gen-Z rider. It boasts a stealth aircraft-inspired design and powerful performance that makes every ride a thrill.</p>
 
-    <section class="info-section bg-light">
-        <div class="container">
-            <div class="section-header text-center" style="margin-bottom:50px;"><h2>Key Features</h2></div>
-            <div class="info-grid">
-                <div class="feature-card"><h4>Gaming Console</h4><p>View Lap times, Top speed recorder, Navigation assistance, and Caller ID.</p></div>
-                <div class="feature-card"><h4>Stealth Design</h4><p>Sharp edges, aggressive styling, and the signature 'T' tail lamp.</p></div>
-                <div class="feature-card"><h4>3-Valve Engine</h4><p>Race-tuned engine for superior pickup and performance.</p></div>
+                <h2>Engine & Power</h2>
+                <ul class="pro-specs-list">
+                    <li><strong>Engine:</strong> 124.8 cc, 3-valve, CVTi-REVV</li>
+                    <li><strong>Power:</strong> 9.38 PS @ 7000 rpm</li>
+                    <li><strong>Torque:</strong> 10.5 Nm @ 5500 rpm</li>
+                    <li><strong>Top Speed:</strong> 95 km/h</li>
+                    <li><strong>0-60 km/h:</strong> 9 seconds</li>
+                </ul>
+
+                <h2>SmartXonnect Features</h2>
+                <ul class="pro-specs-list">
+                    <li><strong>Display:</strong> Fully Digital Gaming Console</li>
+                    <li><strong>Connectivity:</strong> Bluetooth with Call/SMS Alerts</li>
+                    <li><strong>Navigation:</strong> Turn-by-Turn Navigation</li>
+                    <li><strong>Modes:</strong> Street & Sport Mode</li>
+                </ul>
+
+                <div style="margin-top: 40px;">
+                    <a href="../testdrive.html" class="btn btn-primary" style="margin-right: 15px;">Book Test Ride</a>
+                    <a href="../quotation.html" class="btn btn-outline">Get Price Quote</a>
+                </div>
+            </div>
+            <div class="pro-image-side">
+                <img src="../assets/ntorq.jpg" alt="TVS Ntorq 125" onerror="this.src='https://placehold.co/800x600?text=Ntorq+125+Image'">
             </div>
         </div>
-    </section>
+    </div>
 
-    <footer class="footer"><div class="container text-center"><p>&copy; 2025 Tirumala TVS.</p></div></footer>
+    <footer>
+        <div class="container text-center" style="padding: 20px 0; color: #666;"><p>© 2025 Tirumala TVS. All rights reserved.</p></div>
+    </footer>
+    <a href="https://wa.me/919964946512" class="whatsapp-float" target="_blank">💬</a>
 </body>
 </html>
