--- a/models/apache200.html
+++ b/models/apache200.html
@@ -13,74 +13,66 @@
         <div class="container header-top">
             <a href="../index.html" class="logo">Tirumala <span>TVS</span></a>
             <div class="header-btn-group">
-                <a href="../index.html#contact" class="btn-header">Book Service</a>
-                <a href="../index.html#contact" class="btn-header">Get Quote</a>
+                <a href="../service.html" class="btn-header">Book Service</a>
+                <a href="../quotation.html" class="btn-header">Get Quotation</a>
+                <a href="../testdrive.html" class="btn-header">Book Test Drive</a>
             </div>
         </div>
-        <div class="nav-bar">
+        <div class="nav-bar" id="navMenu">
             <div class="container">
                 <ul class="nav-menu">
-                    <li class="nav-item"><a href="../index.html">Home</a></li>
-                    <li class="nav-item"><a href="../models.html">Inventory</a></li>
-                    <li class="nav-item"><a href="../index.html#contact">Contact</a></li>
+                    <li class="nav-item"><a href="../index.html" style="color: var(--primary);">Home <span class="nav-arrow">↗</span></a></li>
+                    <li class="nav-item"><a href="../models.html">Back to Inventory</a></li>
+                    <li class="nav-item"><a href="../contact.html">Contact Us</a></li>
                 </ul>
             </div>
         </div>
     </header>
 
-    <div class="model-hero">
-        <div class="hero-text-side">
-            <span class="model-tag">RACE TUNED</span>
-            <h1 class="model-title">Apache RTR 200 4V</h1>
-            <p style="font-size: 1.1rem; color: #555; margin-bottom: 20px;">
-                The ultimate racing machine. Featuring First-in-Segment Ride Modes, Adjustable Suspension, and Adjustable Levers.
-            </p>
-            <div class="model-price">
-                ₹ 1,46,000* <br><span>(Ex-Showroom Price)</span>
-            </div>
-            <div style="display: flex; gap: 15px;">
-                <a href="../index.html#contact" class="btn btn-primary">Book Test Ride 📅</a>
-                <a href="https://wa.me/919964946512?text=Get%20Quote%20Apache200" class="btn btn-whatsapp">WhatsApp 💬</a>
-            </div>
-        </div>
-        <div class="hero-img-side">
-            <img src="../assets/apache200.jpg" alt="Apache 200" onerror="this.src='https://placehold.co/800x600?text=Apache+200'">
+    <div class="model-hero" style="background: linear-gradient(to right, #f8f9fa, #eef2f5); padding: 60px 0;">
+        <div class="container" style="text-align: center;">
+            <h1 class="model-title" style="color: #1a3b8c;">Apache RTR 200 4V</h1>
+            <p class="model-price" style="font-size: 1.5rem; color: #333;">Starting at ₹ 1,46,000*</p>
         </div>
     </div>
 
-    <div class="spec-grid">
-        <div class="spec-box"><h3>197.7 cc</h3><p>Engine</p></div>
-        <div class="spec-box"><h3>20.82 PS</h3><p>Power</p></div>
-        <div class="spec-box"><h3>Dual Ch</h3><p>ABS</p></div>
-        <div class="spec-box"><h3>Slipper</h3><p>Clutch</p></div>
-    </div>
+    <div class="container pro-detail-section">
+        <div class="pro-detail-grid">
+            <div class="pro-text-side">
+                <h2>Overview</h2>
+                <p>The <strong>Apache RTR 200 4V</strong> is the ultimate street fighter. It brings segment-first features like Ride Modes and Adjustable Suspension, making it a track-ready machine for the road.</p>
 
-    <section class="info-section bg-light">
-        <div class="container">
-            <div class="section-header text-center" style="margin-bottom: 50px;">
-                <h2 style="font-family: 'Oswald', sans-serif; font-size: 2.5rem; color: var(--primary);">Key Features</h2>
+                <h2>Engine & Performance</h2>
+                <ul class="pro-specs-list">
+                    <li><strong>Engine:</strong> 197.75 cc, 4-valve, oil-cooled</li>
+                    <li><strong>Max Power:</strong> 20.82 PS @ 9000 rpm</li>
+                    <li><strong>Max Torque:</strong> 17.25 Nm @ 7250 rpm</li>
+                    <li><strong>0-60 km/h:</strong> 3.9 seconds</li>
+                    <li><strong>Clutch:</strong> Race Tuned Slipper Clutch</li>
+                </ul>
+
+                <h2>Segment-First Features</h2>
+                <ul class="pro-specs-list">
+                    <li><strong>Ride Modes:</strong> Sport, Urban, Rain</li>
+                    <li><strong>Suspension:</strong> Showa Adjustable Front Suspension</li>
+                    <li><strong>Levers:</strong> Adjustable Brake & Clutch Levers</li>
+                    <li><strong>Braking:</strong> Dual Channel ABS with RLP</li>
+                </ul>
+
+                <div style="margin-top: 40px;">
+                    <a href="../testdrive.html" class="btn btn-primary" style="margin-right: 15px;">Book Test Ride</a>
+                    <a href="../quotation.html" class="btn btn-outline">Get Price Quote</a>
+                </div>
             </div>
-            <div class="info-grid">
-                <div class="feature-card">
-                    <h4>Adjustable Suspension</h4>
-                    <p>High-performance Showa suspension with preload adjustment to tune the bike for track or city use.</p>
-                </div>
-                <div class="feature-card">
-                    <h4>Ride Modes</h4>
-                    <p>Switch between Sport, Urban, and Rain modes on the fly to adapt ABS and engine response.</p>
-                </div>
-                <div class="feature-card">
-                    <h4>Race Tuned Slipper Clutch</h4>
-                    <p>Allows for aggressive downshifting while cornering without wheel hop, ensuring maximum stability.</p>
-                </div>
+            <div class="pro-image-side">
+                <img src="../assets/apache200.jpg" alt="Apache 200 4V" onerror="this.src='https://placehold.co/800x600?text=Apache+200+Image'">
             </div>
         </div>
-    </section>
+    </div>
 
-    <footer class="footer">
-        <div class="container text-center"><p>&copy; 2025 Tirumala TVS. All Rights Reserved.</p></div>
+    <footer>
+        <div class="container text-center" style="padding: 20px 0; color: #666;"><p>© 2025 Tirumala TVS. All rights reserved.</p></div>
     </footer>
     <a href="https://wa.me/919964946512" class="whatsapp-float" target="_blank">💬</a>
-
 </body>
 </html>
